--- a/css/minimun.css
+++ b/css/minimun.css
@@ -1,2 +1,6 @@
-<link href="minimum.css" rel="stylesheet" type="text/css" media="screen and (max-width: 480px)"
-/> 
+body {
+  font-size: 14px;
+}
+
+.container {
+  padding: 10px;
