--- a/css/accesible.css
+++ b/css/accesible.css
@@ -12,9 +12,18 @@
 }
 
 /* Aplica los estilos globales cuando el modo alto contraste esté activado */
+body, p, nav>p, nav>ul>li>a, div>ul>li>a, div>ul>li>ul>li>a, section>p, section>a, footer>p {
+    font-size: 180%;
+}
 body{
     background-color: var(--color-footer-texto);
     color: var(--color-texto);
+}
+body>h1, body>h2, body>h3{
+    font-size:300%;
+}
+header>h1{
+    font-size:300%;
 }
 
 a {
@@ -66,5 +75,6 @@ input:focus {
 
 form:focus-within {
     background-color: #ffff99; /* Fondo amarillo suave dentro de formularios */
+    font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
