--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -287,5 +287,14 @@ form:focus-within {
 }
 
 .indice-boton:hover {
-    background-color: var(--color-secundario); /* Cambia de color al pasar el mouse */
+    background-color: var(--color-secundario); 
+}
+
+#video-amara {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    margin: 0 auto; 
+    width: 100%; 
+    max-width: 560px; 
 }
